plt-scheme (4.2.1-2) UNRELEASED; urgency=low

  [ Ari Pollak ]
  * Convert to 3.0 (quilt) format, no patches necessary yet

  [ James Vega ]
  * debian/control:
    - Add myself to Uploaders.
    - Change XS-Vcs-* to Vcs-* and correct a typo in the URLs.

 -- Ari Pollak <ari@debian.org>  Sat, 21 Nov 2009 22:12:28 -0500

plt-scheme (4.2.1-1) unstable; urgency=low

  * New upstream version

 -- Ari Pollak <ari@debian.org>  Mon, 10 Aug 2009 11:29:40 -0400

plt-scheme (4.1.5-1) unstable; urgency=low

  * New upstream version 

 -- Ari Pollak <ari@debian.org>  Sun, 22 Mar 2009 21:55:44 -0400

plt-scheme (4.1.4-1) unstable; urgency=low

  * New upstream version

 -- Ari Pollak <ari@debian.org>  Wed, 21 Jan 2009 08:53:59 -0500

plt-scheme (4.1.3-1) unstable; urgency=low

  * New upstream version

 -- Ari Pollak <ari@debian.org>  Mon, 24 Nov 2008 13:43:11 -0500

plt-scheme (4.1.2-1) unstable; urgency=low

  * New upstream version 

 -- Ari Pollak <ari@debian.org>  Tue, 28 Oct 2008 20:06:59 -0400

plt-scheme (4.1.1-1) unstable; urgency=low

  * Make sure cdbs' and dpkg-buildpackage's CFLAGS and CXXFLAGS aren't passed
    through to configure and make, so we don't get surprising behavior that
    upstream isn't expecting.
  * Update package description from PLT website (Closes: #491636)

 -- Ari Pollak <ari@debian.org>  Sun, 05 Oct 2008 16:45:08 -0400

plt-scheme (4.0.1-2) unstable; urgency=low

  * Rename package to plt-scheme, combining the drscheme and mzscheme
    packages, following advice from upstream (Closes: #488247)
  * Add plt-scheme-doc package
  * Fix the package description, removing references to Rice University

 -- Ari Pollak <ari@debian.org>  Wed, 02 Jul 2008 21:43:32 -0400

drscheme (2:4.0.1-1) unstable; urgency=low

  * New upstream version
  * Update watch file
  * Apply patch from upstream to fix doc paths being hardcoded as the
    temporary package installation directory instead of the configured path
    (Closes: #486513)
